[package]
name = "ryaml"
version = "0.2.0"
edition = "2018"
authors = ["Ethan Smith <ethan@ethanhs.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ryaml"
crate-type = ["cdylib", "rlib"]

[features]
abi3 = ["pyo3/abi3-py37"]

[dependencies]
serde_yaml = "0.8.21"
serde = { version = "1.0.130", features = ["derive"] }
pythonize = "0.15.0"
pyo3-file = { git = "https://github.com/ethanhs/pyo3-file", branch = "textio" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
