[package]
name = "ryaml"
version = "0.4.1"
edition = "2018"
authors = ["Ethan Smith <ethan@ethanhs.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ryaml"
crate-type = ["cdylib", "rlib"]

[features]
abi3 = ["pyo3/abi3-py37"]

[dependencies]
serde_yaml = "0.9.25"
serde = { version = "1.0.188", features = ["derive"] }
pythonize = "0.19.0"
pyo3-file = "0.7.0"

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]
